# clinical-trial-search

./: .envrc  .gitignore  .pre-commit-config.yaml  AACT_DB.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
scripts/: README.md  download_trials.py  load_aact_data.sh  process_db_trials.py  process_trials.py  setup_ctsearch_db.sh  setup_ctsearch_db.sql
src/clinical_trial_search/: __init__.py
src/clinical_trial_search/db/: __init__.py  postgres.py
src/clinical_trial_search/downloaders/: __init__.py  aact.py  clinicaltrials_gov.py
src/clinical_trial_search/processors/: __init__.py  llm_tagger.py
src/clinical_trial_search/utils/: __init__.py  logging.py
